--- a/templates/faq/mbp/setGminDC.html
+++ b/templates/faq/mbp/setGminDC.html
@@ -1,10 +1,23 @@
 {% extends "faq/faq_index.html" %}
 {% block faqmain %}
 
-<h2>Set GminDC</h2>
+<h2>Set GminDC </h2>
 <hr>
+GMINDC, as an option in many SPICE simulators, helps overcome DC convergence problems during simulation.
+<br/><br/>
+By default, GminDC = 1E-12.
+<br/><br/>
+To change GminDC to another value, in MBP, can be done in the following:<br/>
+<br/>
+Please go to MBP menu "Extraction -> Options -> SPICE Options", we could actually set a few options here:
+<ul>
+    <li> GminDC</li>
+    <li> Scale</li>
+    <li> Geoshrink</li>
+    <li> CV Freq</li>
+</ul>
+<img src="/static/faq/mbp/setgmindc/1.png" border="1px"><br/><br/>
 
-sharing, for example, that .zip file can be loaded into other MBP projects by all team members.
 <br>
 <br>
 <br>
