--- a/templates/layouts/mf.html
+++ b/templates/layouts/mf.html
@@ -5,25 +5,27 @@
 
 {% block search %}
 <!-- search bar -->
-<br/><br/><br/><br/>
+<br/><br/><br/>
 <div class="container">
 
     <form method="post" action="/search">
 
 
-        <div style="float:center"><input class="form-control" name="search" placeholder="Search Here" autocomplete="off"
-                                         autofocus="autofocus" type="text">
+        <div style="float:center">
+            <input class="form-control" name="search" placeholder="Search Here" autocomplete="off"
+                   autofocus="autofocus" type="text">
+            <br/>
         </div>
         <!--<div style="float:right;width=25%; clear:both">-->
-            <!--<label>Search in:</label>-->
-            <!--<select name="category">-->
-                <!--<option value="all">All</option>-->
-                <!--<option value="mbpst">MBP Script Tutorial</option>-->
-                <!--<option value="mbpfaq">MBP FAQ</option>-->
-                <!--<option value="mqarules">MQA Rules</option>-->
-                <!--<option value="mqafaq">MQA FAQ</option>-->
-                <!--<option value="blog">Blog</option>-->
-            <!--</select>-->
+        <!--<label>Search in:</label>-->
+        <!--<select name="category">-->
+        <!--<option value="all">All</option>-->
+        <!--<option value="mbpst">MBP Script Tutorial</option>-->
+        <!--<option value="mbpfaq">MBP FAQ</option>-->
+        <!--<option value="mqarules">MQA Rules</option>-->
+        <!--<option value="mqafaq">MQA FAQ</option>-->
+        <!--<option value="blog">Blog</option>-->
+        <!--</select>-->
         <!--</div>-->
     </form>
 
