--- a/templates/mbpst/mbpst_index.html
+++ b/templates/mbpst/mbpst_index.html
@@ -9,7 +9,7 @@ MBP Script Tutorial
 
 <div class="container">
 
-        <div style="float:left; width: 22%; margin-right:5px;">
+        <div style="float:left; width: 22%; margin-right:5px; border-right-width:1px;border-right-style:solid; border-right-color: #D3D3D3">
             {% include 'mbpst/toc.html' %}
 
         </div>
