--- a/templates/mqarules/mqarules_index.html
+++ b/templates/mqarules/mqarules_index.html
@@ -9,7 +9,7 @@ MQA Rules
 
 <div class="container">
 
-        <div style="float:left; width: 18%; margin-right:5px;">
+        <div style="float:left; width: 18%; height:1200px; margin-right:5px;border-right-width:1px;border-right-style:solid; border-right-color: #D3D3D3">
             {% include 'mqarules/toc.html' %}
         </div>
         <div style="float:center; height:1400px; overflow: auto">
