--- a/templates/faq/toc.html
+++ b/templates/faq/toc.html
@@ -1,8 +1,8 @@
 <br/>
 
 <div>
-    <h4><a href="/mbpfaq">MBP FAQs</a></h4>
-    <h4><a href="/mqafaq">MQA FAQs</a></h4>
+    <h4><a href="/mbpfaq"><font style="background-color:#800000; color:#FFFFFF">MBP FAQs</font> </a></h4>
+    <h4><a href="/mqafaq"><font style="background-color:#008000; color:#FFFFFF">MQA FAQs</font></a></h4>
 
     <br/><br/><br/><br/><br/>
 </div>
