--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -67,15 +67,15 @@
                 <li>
                     <a href="/mbpst">MBP Script Tutorial</a>
                 </li>
+                <!--<li>-->
+                    <!--<a href="/mqarules">MQA Rules</a>-->
+                <!--</li>-->
                 <li>
-                    <a href="/mqarules">MQA Rules</a>
+                    <a href="/faq">FAQs</a>
                 </li>
-                <li>
-                    <a href="/mbpfaq">FAQs</a>
-                </li>
-                <li>
-                    <a href="/blog">Blog</a>
-                </li>
+                <!--<li>-->
+                    <!--<a href="/blog">Blog</a>-->
+                <!--</li>-->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
