--- a/templates/index.html
+++ b/templates/index.html
@@ -22,15 +22,15 @@ Device Modeling Works
                         <li>
                             <a href="/mbpst" class="btn btn-default btn-lg">MBP Script Tutorial</a>
                         </li>
+                        <!--<li>-->
+                            <!--<a href="/mqarules" class="btn btn-default btn-lg">MQA Rules</a>-->
+                        <!--</li>-->
                         <li>
-                            <a href="/mqarules" class="btn btn-default btn-lg">MQA Rules</a>
+                            <a href="/faq" class="btn btn-default btn-lg">FAQs</a>
                         </li>
-                        <li>
-                            <a href="/mbpfaq" class="btn btn-default btn-lg">FAQs</a>
-                        </li>
-                         <li>
-                            <a href="/blog" class="btn btn-default btn-lg">Blog</a>
-                        </li>
+                         <!--<li>-->
+                            <!--<a href="/blog" class="btn btn-default btn-lg">Blog</a>-->
+                        <!--</li>-->
                     </ul>
                 </div>
             </div>
