--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -24,9 +24,10 @@ Add Post
         <select name="category">
             <option value="mbpst">MBP Script Tutorial</option>
             <option value="mbpfaq">MBP FAQ</option>
-            <option value="mqarules">MQA Rules</option>
             <option value="mqafaq">MQA FAQ</option>
+            <option value="video">Video Demo</option>
             <option value="blog">Blog</option>
+            <option value="mqarules">MQA Rules</option>
         </select>
         <br/><br/>
         <label>Content:</label><br/>
