--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@ Device Modeling Works
                         <li>
                             <a href="/mbpst" class="btn btn-default btn-lg">MBP Script Tutorial</a>
                         </li>
+                        <li>
+                            <a href="/video" class="btn btn-default btn-lg">Video Demos</a>
+                        </li>
                         <!--<li>-->
                             <!--<a href="/mqarules" class="btn btn-default btn-lg">MQA Rules</a>-->
                         <!--</li>-->
