--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -67,6 +67,9 @@
                 <li>
                     <a href="/mbpst">MBP Script Tutorial</a>
                 </li>
+                <li>
+                    <a href="/video">Video Demos</a>
+                </li>
                 <!--<li>-->
                     <!--<a href="/mqarules">MQA Rules</a>-->
                 <!--</li>-->
@@ -101,7 +104,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="/about">About</a>
+                        <a href="/about" target="_blank">About</a>
                     </li>
 
                     <li class="footer-menu-divider">&sdot;</li>
