--- a/templates/layouts/mf.html
+++ b/templates/layouts/mf.html
@@ -12,7 +12,7 @@
 
 
         <div style="float:center">
-            <input class="form-control" name="search" placeholder="Search Here" autocomplete="off"
+            <input class="form-control" name="search" placeholder="Search This Site..." autocomplete="off"
                    autofocus="autofocus" type="text">
             <br/>
         </div>
