--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,46 @@
 {% extends "layouts/base.html" %}
 
 {% block title %}
-About
+About | T's n C's
 {% endblock %}
 
 {% block content %}
 <br/><br/><br/>
 <div class="container">
-Coming...
+    <br/>
+    <h3>About this Site</h3>
+    <hr/>
+
+    This site aims to provide additional application notes, best practice, and FAQs, etc material for Keysight end-to-end
+    Device Modeling
+    solution, including:
+    <ul>
+        <li>IC-CCAP</li>
+        <li>Model Builder Program(MBP)</li>
+        <li>WaferPro | WaferPro Express</li>
+        <li>Molidel Quality Assurance(MQA)</li>
+        <li>Advanced Low Freq Noise Analyzer(A-LFNA)</li>
+    </ul>
+    All the materials provided in this website are solely from the good will for helping certificated/licensed Keysight
+    users with their Device Modeling software application and usage; however, we are NOT responsible for any sort of
+    work loss or
+    failure from using them. Regular Save and Back-up your work is highly recommended.
+    <br/><br/>
+    Please still use Keysight formal channels for reporting bugs or new enhancements requests.
+    <br/>
+    However, you are welcome to discuss the usage of any of the Keysight Device Modeling software with us.
+    <br/><br/>
+    Thank you for choosing Keysight!
+    <br/><br/> <br/><br/>
+    <h3>Main Contributors</h3>
+    <hr/>
+    <h4>Shuang Cai</h4>
+    An active Keysight employee(10+ years), Device Modeling Application Engineer, based in San Jose, CA, USA.
+    <br/>
+    He has a lovely daughter and a son to deal with at most of his spare time, likes hiking, reading and writing.
+    <br/>
+    Here is his <a href="https://www.linkedin.com/in/shuang-cai-3b824417" target="_blank">LinkedIn Page</a> .
+    <br/><br/> <br/><br/><br/>
+
 </div>
 {% endblock %}
