--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,17 @@ Contact Us
 {% block content %}
 <br/><br/><br/>
 <div class="container">
-    Coming...
+    <br/>
+    <h3>Contact Us</h3>
+    <hr/>
+    For bug-reports and new enhancement requests, please use Keysight formal channels.
+    <br/><br/>
+    You are welcome to discuss the usage of any of the Keysight Device Modeling software with us.
+
+
+    <br/><br/><br/><br/><br/><br/>
+
+
 </div>
 
 {% endblock %}
