--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -104,12 +104,12 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="/about" target="_blank">About</a>
+                        <a href="/disclaimer" target="_blank">Disclaimers</a>
                     </li>
 
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="/contact">Contact</a>
+                        <a href="/about">About</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; Device Modeling Works, 2017. All Rights
