--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@ About | T's n C's
     Device Modeling
     solution, including:
     <ul>
-        <li>IC-CCAP</li>
+        <li>IC-CAP</li>
         <li>Model Builder Program(MBP)</li>
         <li>WaferPro | WaferPro Express</li>
         <li>Molidel Quality Assurance(MQA)</li>
