--- a/templates/disclaimer.html
+++ b/templates/disclaimer.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block title %}
-About | T's n C's
+ T's n C's
 {% endblock %}
 
 {% block content %}
@@ -25,7 +25,13 @@ About | T's n C's
     failure from using them. Regular Save and Back-up your work is highly recommended.
     <br/><br/>
 
+    <h3>Privacy</h3>
+    <hr/>
+    This site may record your name, email, comments, browsing history, etc, and will only be used for improving Keysight Device Modeling
+    solution and the experience of this website. By logging in and browsing this website, you agree with this privacy policy.
+
     <br/><br/>
+
     Thank you for choosing Keysight!
     <br/><br/> <br/><br/>
     <br/><br/><br/>
