--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -20,7 +20,7 @@ function handleClick(cb) {
         {{ render_field_with_errors(login_user_form.email, class="form-control") }}
         {{ render_field_with_errors(login_user_form.password, class="form-control") }}
         {{ render_field_with_errors(login_user_form.remember) }}
-        <label>By logging in, I agree to the <a href="/about" target="_blank">Terms of Use Agreement</a>.
+        <label>By logging in, I agree to the <a href="/disclaimer" target="_blank">Terms of Use Agreement</a>.
         </label>
         {{ render_field(login_user_form.next) }}
         {{ render_field(login_user_form.submit, class="btn btn-primary") }}
