--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -46,7 +46,7 @@ Dashboard
         {% for p in userHis %}
         <tr>
             <td> {{ p[0] }}</td>
-            <td>{{ p[1] }}</td>
+            <td><a href="/user_view_history/{{p[0]}}" target="_blank">{{ p[1] }}</a></td>
             <td>{{p[2]}}</td>
             <td>{{p[3]}}</td>
 
