--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -18,6 +18,9 @@ Add User
     <label>Email:</label>
     <input id="email" name="email" type="text" class="form-control"/>
     <br/>
+    <label>Company:</label>
+    <input id="company" name="company" type="text" class="form-control"/>
+    <br/>
     <label>Password:</label>
     <input id="password" name="password" type="password" class="form-control"/>
     <br/>
