--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,9 @@ Device Modeling Works
                         <li>
                             <a href="/video" class="btn btn-default btn-lg">Video Demos</a>
                         </li>
-                        <!--<li>-->
-                            <!--<a href="/mqarules" class="btn btn-default btn-lg">MQA Rules</a>-->
-                        <!--</li>-->
+                        <li>
+                            <a href="/mqarules" class="btn btn-default btn-lg">MQA Rules</a>
+                        </li>
                         <li>
                             <a href="/faq" class="btn btn-default btn-lg">FAQs</a>
                         </li>
