--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -82,9 +82,9 @@
                 <li>
                     <a href="/video">Video Demos</a>
                 </li>
-                <!--<li>-->
-                    <!--<a href="/mqarules">MQA Rules</a>-->
-                <!--</li>-->
+                <li>
+                    <a href="/mqarules">MQA Rules</a>
+                </li>
                 <li>
                     <a href="/faq">FAQs</a>
                 </li>
