--- a/templates/mqarules/rules/fmax.html
+++ b/templates/mqarules/rules/fmax.html
@@ -1,12 +1,66 @@
 {% extends "mqarules/mqarules_index.html" %}
+{% block title%}
+Fmax Rule
+{% endblock %}
+
 {% block mqarulesmain %}
 
-Coming...
+<h2>Fmax Example</h2>
+<h3>MQA Rules</h3>
+<hr>
+Fmax is the frequency at which maximum unilateral power gain equals unity, and can be described by the following equation in terms of Y parameters.
 
 <br>
 <br>
+U(f𝑚𝑎𝑥) = |𝑌21 − 𝑌12|<sup>2</sup> / 4*( 𝑅𝑒(𝑌11)𝑅𝑒(𝑌22) − 𝑅𝑒(𝑌12)𝑅𝑒(𝑌21) ) = 1
 <br>
 <br>
+And, S and Y parameters are built-in in MQA, so we can use them directly in MQA rule [Target] section to carry out the above equation.
+<br>
+<br>
+
+Fmax_example.rule:<a href="/mqarules/fmax/fmax_example" target="_blank">download</a>
+<pre>
+[common]
+appliedmodel = binning, global, macro
+
+[Group: 10:Title=Test Fmax ]
+
+[Label: 10001:title= Fmax vs Vgs]
+[Condition:1]
+[Loops
+: p1=Vds(vdd)
+: p2=Vgs(start=Vgg/2,stop=vgg,step=0.1)
+: p3=w(g_wmin)
+: p4=l(g_lmin)
+: p5=Freq(start=1e10,stop=1e15,perdec=4)
+: p6=t(tnom)
+: p7=Vbs(0)
+]
+[Target
+:<font style="color:blue"> y0=Y11_r</font>
+:D=CalComplex("Y21-Y12")
+:Nu = (D_r*D_r + D_i*D_i)
+:De = 4*(Y11_r*Y22_r - Y12_r*Y21_r)
+:MAG = sqrt(Nu/De)
+:Fmax= <font style="color:red">CalCurve(freq,MAG,"FindX","Y=1")</font>
+:y=Fmax
+]
+[check:01:Fmax by CalComplex:Save2DData(p4,p2,y): info: no check]
+[Compare:02:compre Fmax:CompPlot(p4,p2,y):error:TBD]
+
+</pre>
+In the [Target] section all 4 S parameters (S11/S12/S21/S22) are known(built-in) in MQA, we can use them directly.
+<br/><br/>
+Note: we have to declare <font style="color:blue">:y0=Y11_r</font> at the beginning in the [Target] section to triger Y parameter.
+<br/><br/>
+And, Sxx_r means the real part of Sxx; Sxx_i means the imaginary part of Sxx.
+<br/><br/>
+Once we get the magnitude(MAG) of the above expression which is an equation of freq, the last step is to use Y=1 to intercept the "MAG vs Freq" curve,
+and return the X value of the interception point and that gives us the desired Fmax, this is done by <font
+        style="color:red">CalCurve(freq,MAG,"FindX","Y=1")</font>
+<br/><br/>
+Now that we have derived the Fmax, we could put it in the check/plotting functions as Y axis, and pick p2=Vgs as X axis, (option: and some other variable as Z axis.)
 
 
 {% endblock %}
