--- a/templates/mqarules/rules/ft.html
+++ b/templates/mqarules/rules/ft.html
@@ -52,7 +52,7 @@ Once we get the magnitude of the H21(H21mag) which is an equation of freq, the l
 and return the X value of the interception point, and that gives us the desired Ft, this is done by
 <font style="color:red">CalCurve(freq,H21mag_r,"FindX","Y=1")</font>
 <br/><br/>
-Now that we have derived the Fmax, we could put it in the check/plotting functions as Y axis, and pick p2=Vgs as X axis, (option: and some other variable as Z axis.)
+Now that we have derived the Ft, we could put it in the check/plotting functions as Y axis, and pick p2=Vgs as X axis, (option: and some other variable as Z axis.)
 
 <br>
 
