--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block title %}
-About | T's n C's
+About
 {% endblock %}
 
 {% block content %}
@@ -11,7 +11,7 @@ About | T's n C's
     <h3>About this Site</h3>
     <hr/>
 
-    This site aims to provide additional application notes, best practice, and FAQs, etc material for Keysight end-to-end
+    This site aims to provide <font style="color:red">ADDITIONAL</font> application notes, best practice, and FAQs, etc material for Keysight end-to-end
     Device Modeling
     solution, including:
     <ul>
@@ -21,6 +21,8 @@ About | T's n C's
         <li>Molidel Quality Assurance(MQA)</li>
         <li>Advanced Low Freq Noise Analyzer(A-LFNA)</li>
     </ul>
+    Lots of items/functions explanations can be found in the software's user manual and will not be duplicated here.
+    <br/><br/>
     All the materials provided in this website are solely from the good will for helping certificated/licensed Keysight
     users with their Device Modeling software application and usage; however, we are NOT responsible for any sort of
     work loss or
