--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -3,6 +3,7 @@
 <div>
     <h5><a href="/mqarules/ft">Ft</a></h5>
     <h5><a href="/mqarules/fmax">Fmax</a></h5>
+    <h5><a href="/mqarules/vth_finfet">Vth_con for FinFET</a></h5>
 
     <br/><br/><br/><br/><br/>
 </div>
