--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ Device Modeling Works
 
 <!-- Header -->
 <a name="about"></a>
-<div class="intro-header">
+<div class="intro-header" style="background-image:url('static/img/{{num}}.jpg');background-position: center; background-size:cover;background-repeat:no" >
     <div class="container">
 
         <div class="row">
