--- a/templates/disclaimer.html
+++ b/templates/disclaimer.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block title %}
- T's n C's
+T's n C's
 {% endblock %}
 
 {% block content %}
@@ -20,15 +20,22 @@
     <br/><br/>
     SPECTRE, RelXpert are product names and registered trademarks of <a href="https://www.cadence.com/" target="_blank">Cadence</a>.
     <br/><br/>
+    All example files used in this website are from or created based on these products's example/demo folder.
+    <br/> <br/>
     All the materials provided in this website are solely from the good will for helping certificated/licensed Keysight
-    users with their Device Modeling software application and usage; however, we are NOT responsible for any sort of work loss or
-    failure from using them. Regular Save and Back-up your work is highly recommended.
+    users with their Device Modeling software application and usage; however, we are NOT responsible for any sort of
+    work loss or
+    failure from using them. Regular Save and Back-up your work are highly recommended.
+
+
     <br/><br/>
 
     <h3>Privacy</h3>
     <hr/>
-    This site may record your name, email, comments, browsing history, etc, and will only be used for improving Keysight Device Modeling
-    solution and the experience of this website. By logging in and browsing this website, you agree with this privacy policy.
+    This site may record your name, email, comments, browsing history, etc, and will only be used for improving Keysight
+    Device Modeling
+    solution and the experience of this website. By logging in and browsing this website, you agree with this privacy
+    policy.
 
     <br/><br/>
 
