--- a/templates/about.html
+++ b/templates/about.html
@@ -23,10 +23,13 @@ About
     </ul>
     Lots of items/functions explanations can be found in the software's user manual and will not be duplicated here.
     <br/><br/>
+
+    All example files used in this website are from or created based on these products's example/demo folder.
+    <br/><br/>
     All the materials provided in this website are solely from the good will for helping certificated/licensed Keysight
     users with their Device Modeling software application and usage; however, we are NOT responsible for any sort of
     work loss or
-    failure from using them. Regular Save and Back-up your work is highly recommended.
+    failure from using them. Regular Save and Back-up your work are highly recommended.
     <br/><br/>
     Please still use Keysight formal channels for reporting bugs or new enhancements requests.
     <br/>
