--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -71,13 +71,13 @@
 
                 <li>
                     {% if current_user.username.__len__()==0 %}
-                    <a href="/login"> log in | </a>
+                    <a href="/login"> login | </a>
                     {% else %}
-                    <a href="/logout"> log out | </a>
+                    <a href="/logout"> logout | </a>
                     {% endif %}
                 </li>
                 <li>
-                    <a href="/mbpst">MBP Script Tutorial</a>
+                    <a href="/mbpst">MBP Script</a>
                 </li>
                 <li>
                     <a href="/video">Video Demos</a>
