--- a/templates/index.html
+++ b/templates/index.html
@@ -20,16 +20,16 @@ Device Modeling Works
                     <hr class="intro-divider">
                     <ul class="list-inline intro-social-buttons">
                         <li>
-                            <a href="/mbpst" class="btn btn-default btn-lg">MBP Script Tutorial</a>
+                            <a href="/mbpst" class="btn btn-default btn-lg">MBP Script <sup>{{mbpstCt}}</sup></a>
                         </li>
                         <li>
-                            <a href="/video" class="btn btn-default btn-lg">Video Demos</a>
+                            <a href="/video" class="btn btn-default btn-lg">Video Demos <sup>{{videoCt}}</sup></a>
                         </li>
                         <li>
-                            <a href="/mqarules" class="btn btn-default btn-lg">MQA Rules</a>
+                            <a href="/mqarules" class="btn btn-default btn-lg">MQA Rules <sup>{{ruleCt}}</sup></a>
                         </li>
                         <li>
-                            <a href="/faq" class="btn btn-default btn-lg">FAQs</a>
+                            <a href="/faq" class="btn btn-default btn-lg">FAQs <sup>{{faqCt}}</sup></a>
                         </li>
                          <!--<li>-->
                             <!--<a href="/blog" class="btn btn-default btn-lg">Blog</a>-->
