--- a/templates/video/toc.html
+++ b/templates/video/toc.html
@@ -1,10 +1,7 @@
 <br/>
 
 <div>
-    <h5><a href="/video/mqaHvsS">Compare HSPICE vs SPECTRE Models</a></h5>
-    <h5><a href="/video/MQA_NearVth">Gm/Rout/Slope/Ids Near Vth</a></h5>
-    <h5><a href="/video/MQA_SimVerComp">Compare Diff Versions of a Simulator</a></h5>
-    <h5><a href="/video/mqachecknetlist">Check MQA Netlist Files</a></h5>
+    <h4>MBP</h4>
     <h5><a href="/video/MBP_check_netlist">Check MBP Netlist Files </a></h5>
     <h5><a href="/video/MBP_tabs_sfloat">Make MBP Panels Afloat</a></h5>
     <h5><a href="/video/MBP_comp_models">Compare Models in MBP </a></h5>
@@ -15,6 +12,12 @@
     <h5><a href="/video/MBP_bigger_RMS">Why is my RMS Larger after Optimization</a></h5>
     <h5><a href="/video/MBP_sigNum_symbolSize">Change Significant Digits and Symbol Size</a></h5>
     <h5><a href="/video/MBP_RMS_algor">MBP RMS Algorithms</a></h5>
+
+    <h4>MQA</h4>
+    <h5><a href="/video/mqaHvsS">Compare HSPICE vs SPECTRE Models</a></h5>
+    <h5><a href="/video/MQA_NearVth">Gm/Rout/Slope/Ids Near Vth</a></h5>
+    <h5><a href="/video/MQA_SimVerComp">Compare Diff Versions of a Simulator</a></h5>
+    <h5><a href="/video/mqachecknetlist">Check MQA Netlist Files</a></h5>
 
 
     <br/><br/><br/><br/><br/>
