--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@ Device Modeling Works
 
 <!-- Header -->
 <a name="about"></a>
-<div class="intro-header" style="background-image:url('static/img/{{num}}.jpg');background-position: center; background-size:cover;background-repeat:no" >
+<div class="intro-header"
+     style="background-image:url('static/img/{{num}}.jpg');background-position: center; background-size:cover;background-repeat:no">
     <div class="container">
 
         <div class="row">
@@ -31,8 +32,8 @@ Device Modeling Works
                         <li>
                             <a href="/faq" class="btn btn-default btn-lg">FAQs <sup>{{faqCt}}</sup></a>
                         </li>
-                         <!--<li>-->
-                            <!--<a href="/blog" class="btn btn-default btn-lg">Blog</a>-->
+                        <!--<li>-->
+                        <!--<a href="/blog" class="btn btn-default btn-lg">Blog</a>-->
                         <!--</li>-->
                     </ul>
                 </div>
@@ -42,11 +43,25 @@ Device Modeling Works
     </div>
     <!-- /.container -->
 
+
 </div>
 <!-- /.intro-header -->
 
 <!-- Page Content -->
-
+<div class="container" style="height: 200px; overflow: auto">
+    <h5>Update History</h5>
+    <hr/>
+    <h6>2017.2.14</h6>
+    Add Script .zip files download links for all MBP Script Tutorial pages.
+    <h6>2017.2.12</h6>
+    Add example MQA rules download links.
+    <h6>2017.2.10</h6>
+    Add one MQA rule example for FDSOI device.
+    <h6>2017.2.1</h6>
+    Open MQA Rules, where additional MQA rule files are exampled and explained.
+    <h6>2017.1.20</h6>
+    Online!!! Open MBP Script Tutorial, Demo Vidoes, FAQs.
+</div>
 
 </div>
 {% endblock %}
