--- a/templates/mbpst/toc.html
+++ b/templates/mbpst/toc.html
@@ -2,16 +2,16 @@
 
 <div>
 
-    <li>Chap 1. MBP Script Basics
-        <ul>
-            <li><a href="/mbpst/chap1.1">1. What is MBP Script</a></li>
-            <li><a href="/mbpst/chap1.2">2. Get Started</a></li>
-        </ul>
-    </li>
-    <li>Chap 2. MBP Script Applications
-        <ul>
+    Chap 1. MBP Script Basics
+    <ul style="list-style: none;">
+        <li><a href="/mbpst/chap1.1">1. What is MBP Script</a></li>
+        <li><a href="/mbpst/chap1.2">2. Get Started</a></li>
+    </ul>
+
+    Chap 2. MBP Script Applications
+        <ul style="list-style: none;">
             <li>2.1 IMV
-                <ul>
+                <ul style="list-style: none;">
                     <li><a href="/mbpst/chap2.1.1">1. IMV Targets</a></li>
                     <li><a href="/mbpst/chap2.1.2">2. IMV Plots</a></li>
                     <li><a href="/mbpst/chap2.1.3">3. IMV Constant</a></li>
@@ -19,20 +19,20 @@
             </li>
             <li><a href="/mbpst/chap2.2">2.2 DP (Device Parameter)</a></li>
             <li>2.3 Flow
-                <ul>
+                <ul style="list-style: none;">
                     <li><a href="/mbpst/chap2.3.1">1. How Flow Works</a></li>
                     <li><a href="/mbpst/chap2.3.2">2. Define a New Flow</a></li>
                 </ul>
             </li>
             <li>2.4 GUI
-                <ul>
+                <ul style="list-style: none;">
                     <li>1. Define a GUI item</li>
                 </ul>
             </li>
         </ul>
-    </li>
-    <li>Chap 3. More Examples
-        <ul>
+
+    Chap 3. More Examples
+        <ul style="list-style: none;">
 
             <li><a href="/mbpst/chap3.1">1. Define Ideff</a></li>
             <li><a href="/mbpst/chap3.2">2. Define Vth</a></li>
@@ -66,28 +66,25 @@
             <li><a href="/mbpst/chap3.23">23. Global Variables</a></li>
 
         </ul>
-    </li>
-    <li>Chap 4. Debugging
-        <ul>
+
+    Chap 4. Debugging
+        <ul style="list-style: none;">
 
             <li><a href="/mbpst/chap4.1">1. Simple Debugging</a></li>
             <li><a href="/mbpst/chap4.2">2. Advanced Debugging</a></li>
 
 
         </ul>
-    </li>
-    <li>Chap 5. Appendix
-        <ul>
+
+    Chap 5. Appendix
+        <ul style="list-style: none;">
             <li><a href="/mbpst/chap5.1">5.1 Bulit-in Java
                 Algorithm</a></li>
             <li><a href="/mbpst/chap5.2">5.2 Script APIs</a>
-                <ul>
-                    <li><a href="/mbpst/chap5.2.1">MBP</a></li>
-                </ul>
             </li>
 
         </ul>
-    </li>
+
 
 </div>
 
