--- a/templates/mqarules/rules/ft.html
+++ b/templates/mqarules/rules/ft.html
@@ -16,7 +16,7 @@ so we can use them directly in MQA rule [Target] section to carry out the above 
 
 <br>
 <br>
-Ft_example.rule: <a href="/mqarules/ft/ft_example" target="_blank">download</a>
+Ft_example.rule: <a href="/mqarules/ft/ft_example/download" target="_blank">download</a>
 <pre>
 [common]
 appliedmodel = binning, global, macro
