--- a/templates/index.html
+++ b/templates/index.html
@@ -48,19 +48,42 @@ Device Modeling Works
 <!-- /.intro-header -->
 
 <!-- Page Content -->
-<div class="container" style="height: 200px; overflow: auto">
+<div class="container" style="height: 160px; overflow: auto">
     <h5>Update History</h5>
-    <hr/>
-    <h6>2017.2.14</h6>
-    Add Script .zip files download links for all MBP Script Tutorial pages.
-    <h6>2017.2.12</h6>
-    Add example MQA rules download links.
-    <h6>2017.2.10</h6>
-    Add one MQA rule example for FDSOI device.
-    <h6>2017.2.1</h6>
-    Open MQA Rules, where additional MQA rule files are exampled and explained.
-    <h6>2017.1.20</h6>
-    Online!!! Open MBP Script Tutorial, Demo Vidoes, FAQs.
+
+    <table width="100%">
+        <tr>
+            <td width="15%">2017.2.17</td>
+            <td>Complete all the APIs explanation in MBP Script Tutorial Chap5.2.</td>
+
+        </tr>
+        <tr>
+            <td width="15%">2017.2.14</td>
+            <td>Add Script .zip files download links for all MBP Script Tutorial pages.</td>
+
+        </tr>
+        <tr>
+            <td width="15%">2017.2.12</td>
+            <td>Add example MQA rules download links.</td>
+
+        </tr>
+        <tr>
+            <td width="15%">2017.2.10</td>
+            <td>Add one MQA rule example for FDSOI device.</td>
+
+        </tr>
+        <tr>
+            <td width="15%">2017.2.01</td>
+            <td>Open MQA Rules, where additional MQA rule files are exampled and explained.</td>
+
+        </tr>
+        <tr>
+            <td width="15%">2017.1.20</td>
+            <td>Online!!! Open MBP Script Tutorial, Demo Vidoes, FAQs.</td>
+
+        </tr>
+
+    </table>
 </div>
 
 </div>
