--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -5,5 +5,6 @@
     <h5><a href="/mqarules/fmax">Fmax</a></h5>
     <h5><a href="/mqarules/vth_finfet">Vth_con for FinFET</a></h5>
     <h5><a href="/mqarules/sweepFromNegativeVgs">Sweep Vgs from Negative</a></h5>
+    <h5><a href="/mqarules/synchro">Synchronized Variables</a></h5>
     <br/><br/><br/><br/><br/>
 </div>
