--- a/templates/index.html
+++ b/templates/index.html
@@ -53,32 +53,42 @@ Device Modeling Works
 
     <table width="100%">
         <tr>
-            <td width="15%">2017.2.17</td>
+            <td width="15%">2017.02.22</td>
+            <td>Add a MQA rule example for Idsat normalized by Idsat@Max(SA_SB).</td>
+
+        </tr>
+        <tr>
+            <td width="15%">2017.02.21</td>
+            <td>Add another MQA rule example for LOD effect where we have synchronized variables, SA_SB.</td>
+
+        </tr>
+        <tr>
+            <td width="15%">2017.02.17</td>
             <td>Complete all the APIs explanation in MBP Script Tutorial Chap5.2.</td>
 
         </tr>
         <tr>
-            <td width="15%">2017.2.14</td>
+            <td width="15%">2017.02.14</td>
             <td>Add Script .zip files download links for all MBP Script Tutorial pages.</td>
 
         </tr>
         <tr>
-            <td width="15%">2017.2.12</td>
+            <td width="15%">2017.02.12</td>
             <td>Add example MQA rules download links.</td>
 
         </tr>
         <tr>
-            <td width="15%">2017.2.10</td>
+            <td width="15%">2017.02.10</td>
             <td>Add one MQA rule example for FDSOI device.</td>
 
         </tr>
         <tr>
-            <td width="15%">2017.2.01</td>
+            <td width="15%">2017.02.01</td>
             <td>Open MQA Rules, where additional MQA rule files are exampled and explained.</td>
 
         </tr>
         <tr>
-            <td width="15%">2017.1.20</td>
+            <td width="15%">2017.01.20</td>
             <td>Online!!! Open MBP Script Tutorial, Demo Vidoes, FAQs.</td>
 
         </tr>
