--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -6,5 +6,11 @@
     <h5><a href="/mqarules/vth_finfet">Vth_con for FinFET</a></h5>
     <h5><a href="/mqarules/sweepFromNegativeVgs">Sweep Vgs from Negative</a></h5>
     <h5><a href="/mqarules/synchro">Synchronized Variables</a></h5>
+    <h5><a href="/mqarules/normalize">Normalize Idsat by Idsat@Max(SA)</a></h5>
+    <h5><a href="/mqarules/ideff">Ideff | Idhigh | Idlow</a></h5>
+
+
     <br/><br/><br/><br/><br/>
+
+
 </div>
